Package_Tools/include-C/gmp/gmp.h

typedef unsigned long int	mp_bitcnt_t;
typedef int			mp_size_t;
typedef long int		mp_size_t;
/* Available random number generation algorithms.  */
typedef enum
{
  GMP_RAND_ALG_DEFAULT = 0,
  GMP_RAND_ALG_LC = GMP_RAND_ALG_DEFAULT /* Linear congruential.  */
} gmp_randalg_t;
/* Types for function declarations in gmp files.  */
/* ??? Should not pollute user name space with these ??? */
typedef const __mpz_struct *mpz_srcptr;
typedef __mpz_struct *mpz_ptr;
typedef __gmp_randstate_struct *gmp_randstate_ptr;
typedef const __gmp_randstate_struct *gmp_randstate_srcptr;
/**************** Random number routines.  ****************/

/* obsolete */
extern void gmp_randinit (gmp_randstate_ptr, gmp_randalg_t, ...);
extern void gmp_randinit_default (gmp_randstate_ptr);
extern void gmp_randinit_lc_2exp (gmp_randstate_ptr, mpz_srcptr, unsigned long int, mp_bitcnt_t);
extern int gmp_randinit_lc_2exp_size (gmp_randstate_ptr, mp_bitcnt_t);
extern void gmp_randinit_mt (gmp_randstate_ptr);
extern void gmp_randinit_set (gmp_randstate_ptr, gmp_randstate_srcptr);
extern void gmp_randseed (gmp_randstate_ptr, mpz_srcptr);
extern void gmp_randseed_ui (gmp_randstate_ptr, unsigned long int);
extern void gmp_randclear (gmp_randstate_ptr);
extern unsigned long gmp_urandomb_ui (gmp_randstate_ptr, unsigned long);
extern unsigned long gmp_urandomm_ui (gmp_randstate_ptr, unsigned long);
/**************** Formatted output routines.  ****************/

extern int gmp_asprintf (char **, const char *, ...);
extern int gmp_fprintf (FILE *, const char *, ...);
extern int gmp_obstack_printf (struct obstack *, const char *, ...);
extern int gmp_obstack_vprintf (struct obstack *, const char *, va_list);
extern int gmp_printf (const char *, ...);
extern int gmp_snprintf (char *, size_t, const char *, ...);
extern int gmp_sprintf (char *, const char *, ...);
extern int gmp_vasprintf (char **, const char *, va_list);
extern int gmp_vfprintf (FILE *, const char *, va_list);
extern int gmp_vprintf (const char *, va_list);
extern int gmp_vsnprintf (char *, size_t, const char *, va_list);
extern int gmp_vsprintf (char *, const char *, va_list);
/**************** Formatted input routines.  ****************/

extern int gmp_fscanf (FILE *, const char *, ...);
extern int gmp_scanf (const char *, ...);
extern int gmp_sscanf (const char *, const char *, ...);
extern int gmp_vfscanf (FILE *, const char *, va_list);
extern int gmp_vscanf (const char *, va_list);
extern int gmp_vsscanf (const char *, const char *, va_list);
/**************** Integer (i.e. Z) routines.  ****************/

extern void *_mpz_realloc (mpz_ptr, mp_size_t);
extern void mpz_abs (mpz_ptr, mpz_srcptr);
extern void mpz_add (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_add_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_addmul (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_addmul_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_and (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_array_init (mpz_ptr, mp_size_t, mp_size_t);
extern void mpz_bin_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_bin_uiui (mpz_ptr, unsigned long int, unsigned long int);
extern void mpz_cdiv_q (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_cdiv_q_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_cdiv_q_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_cdiv_qr (mpz_ptr, mpz_ptr, mpz_srcptr, mpz_srcptr);
extern unsigned long int mpz_cdiv_qr_ui (mpz_ptr, mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_cdiv_r (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_cdiv_r_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_cdiv_r_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern unsigned long int mpz_cdiv_ui (mpz_srcptr, unsigned long int) ;
extern void mpz_clear (mpz_ptr);
extern void mpz_clears (mpz_ptr, ...);
extern void mpz_clrbit (mpz_ptr, mp_bitcnt_t);
extern int mpz_cmp (mpz_srcptr, mpz_srcptr)  ;
extern int mpz_cmp_d (mpz_srcptr, double) ;
extern int _mpz_cmp_si (mpz_srcptr, signed long int)  ;
extern int _mpz_cmp_ui (mpz_srcptr, unsigned long int)  ;
extern int mpz_cmpabs (mpz_srcptr, mpz_srcptr)  ;
extern int mpz_cmpabs_d (mpz_srcptr, double) ;
extern int mpz_cmpabs_ui (mpz_srcptr, unsigned long int)  ;
extern void mpz_com (mpz_ptr, mpz_srcptr);
extern void mpz_combit (mpz_ptr, mp_bitcnt_t);
extern int mpz_congruent_p (mpz_srcptr, mpz_srcptr, mpz_srcptr) ;
extern int mpz_congruent_2exp_p (mpz_srcptr, mpz_srcptr, mp_bitcnt_t)  ;
extern int mpz_congruent_ui_p (mpz_srcptr, unsigned long, unsigned long) ;
extern void mpz_divexact (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_divexact_ui (mpz_ptr, mpz_srcptr, unsigned long);
extern int mpz_divisible_p (mpz_srcptr, mpz_srcptr) ;
extern int mpz_divisible_ui_p (mpz_srcptr, unsigned long) ;
extern int mpz_divisible_2exp_p (mpz_srcptr, mp_bitcnt_t)  ;
extern void mpz_dump (mpz_srcptr);
extern void *mpz_export (void *, size_t *, int, size_t, int, size_t, mpz_srcptr);
extern void mpz_fac_ui (mpz_ptr, unsigned long int);
extern void mpz_2fac_ui (mpz_ptr, unsigned long int);
extern void mpz_mfac_uiui (mpz_ptr, unsigned long int, unsigned long int);
extern void mpz_primorial_ui (mpz_ptr, unsigned long int);
extern void mpz_fdiv_q (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_fdiv_q_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_fdiv_q_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_fdiv_qr (mpz_ptr, mpz_ptr, mpz_srcptr, mpz_srcptr);
extern unsigned long int mpz_fdiv_qr_ui (mpz_ptr, mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_fdiv_r (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_fdiv_r_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_fdiv_r_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern unsigned long int mpz_fdiv_ui (mpz_srcptr, unsigned long int) ;
extern void mpz_fib_ui (mpz_ptr, unsigned long int);
extern void mpz_fib2_ui (mpz_ptr, mpz_ptr, unsigned long int);
extern int mpz_fits_sint_p (mpz_srcptr)  ;
extern int mpz_fits_slong_p (mpz_srcptr)  ;
extern int mpz_fits_sshort_p (mpz_srcptr)  ;
extern int mpz_fits_uint_p (mpz_srcptr)  ;
extern int mpz_fits_ulong_p (mpz_srcptr)  ;
extern int mpz_fits_ushort_p (mpz_srcptr)  ;
extern void mpz_gcd (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern unsigned long int mpz_gcd_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_gcdext (mpz_ptr, mpz_ptr, mpz_ptr, mpz_srcptr, mpz_srcptr);
extern double mpz_get_d (mpz_srcptr) ;
extern double mpz_get_d_2exp (signed long int *, mpz_srcptr);
extern /* signed */ long int mpz_get_si (mpz_srcptr)  ;
extern char *mpz_get_str (char *, int, mpz_srcptr);