Package_Tools/include-C/gmp/gmp_backup.pas


procedure gmp_randinit(para1: Tgmp_randstate_ptr; para2: Tgmp_randalg_t); varargs; cdecl; external libgmp name '__gmp_randinit';
procedure gmp_randinit_default(para1: Tgmp_randstate_ptr); cdecl; external libgmp name '__gmp_randinit_default';
procedure gmp_randinit_lc_2exp(para1: Tgmp_randstate_ptr; para2: Tmpz_srcptr; para3: dword; para4: Tmp_bitcnt_t); cdecl; external libgmp name '__gmp_randinit_lc_2exp';
function gmp_randinit_lc_2exp_size(para1: Tgmp_randstate_ptr; para2: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmp_randinit_lc_2exp_size';
procedure gmp_randinit_mt(para1: Tgmp_randstate_ptr); cdecl; external libgmp name '__gmp_randinit_mt';
procedure gmp_randinit_set(para1: Tgmp_randstate_ptr; para2: Tgmp_randstate_srcptr); cdecl; external libgmp name '__gmp_randinit_set';
procedure gmp_randseed(para1: Tgmp_randstate_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmp_randseed';
procedure gmp_randseed_ui(para1: Tgmp_randstate_ptr; para2: dword); cdecl; external libgmp name '__gmp_randseed_ui';
procedure gmp_randclear(para1: Tgmp_randstate_ptr); cdecl; external libgmp name '__gmp_randclear';
function gmp_urandomb_ui(para1: Tgmp_randstate_ptr; para2: dword): dword; cdecl; external libgmp name '__gmp_urandomb_ui';
function gmp_urandomm_ui(para1: Tgmp_randstate_ptr; para2: dword): dword; cdecl; external libgmp name '__gmp_urandomm_ui';
{*************** Formatted output routines.  *************** }
function gmp_asprintf(para1: PPchar; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_asprintf';
function gmp_fprintf(para1: PFILE; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_fprintf';
function gmp_obstack_printf(para1: Pobstack; para2: pchar): longint; cdecl; external libgmp name '__gmp_obstack_printf';
function gmp_obstack_vprintf(para1: Pobstack; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_obstack_vprintf';
function gmp_printf(para1: pchar): longint; varargs; cdecl; external libgmp name '__gmp_printf';
function gmp_snprintf(para1: pchar; para2: Tsize_t; para3: pchar): longint; varargs; cdecl; external libgmp name '__gmp_snprintf';
function gmp_sprintf(para1: pchar; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_sprintf';
function gmp_vasprintf(para1: PPchar; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vasprintf';
function gmp_vfprintf(para1: PFILE; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vfprintf';
function gmp_vprintf(para1: pchar; para2: Tva_list): longint; cdecl; external libgmp name '__gmp_vprintf';
function gmp_vsnprintf(para1: pchar; para2: Tsize_t; para3: pchar; para4: Tva_list): longint; cdecl; external libgmp name '__gmp_vsnprintf';
function gmp_vsprintf(para1: pchar; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vsprintf';
{*************** Formatted input routines.  *************** }
function gmp_fscanf(para1: PFILE; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_fscanf';
function gmp_scanf(para1: pchar): longint; varargs; cdecl; external libgmp name '__gmp_scanf';
function gmp_sscanf(para1: pchar; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_sscanf';
function gmp_vfscanf(para1: PFILE; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vfscanf';
function gmp_vscanf(para1: pchar; para2: Tva_list): longint; cdecl; external libgmp name '__gmp_vscanf';
function gmp_vsscanf(para1: pchar; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vsscanf';
{*************** Integer (i.e. Z) routines.  *************** }
function _mpz_realloc(para1: Tmpz_ptr; para2: Tmp_size_t): pointer; cdecl; external libgmp name '__g_mpz_realloc';
procedure mpz_abs(para1: Tmpz_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_abs';
procedure mpz_add(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_add';
procedure mpz_add_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword); cdecl; external libgmp name '__gmpz_add_ui';
procedure mpz_addmul(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_addmul';
procedure mpz_addmul_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword); cdecl; external libgmp name '__gmpz_addmul_ui';
procedure mpz_and(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_and';
procedure mpz_array_init(para1: Tmpz_ptr; para2: Tmp_size_t; para3: Tmp_size_t); cdecl; external libgmp name '__gmpz_array_init';
procedure mpz_bin_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword); cdecl; external libgmp name '__gmpz_bin_ui';
procedure mpz_bin_uiui(para1: Tmpz_ptr; para2: dword; para3: dword); cdecl; external libgmp name '__gmpz_bin_uiui';
procedure mpz_cdiv_q(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_cdiv_q';
procedure mpz_cdiv_q_2exp(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_cdiv_q_2exp';
function mpz_cdiv_q_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword): dword; cdecl; external libgmp name '__gmpz_cdiv_q_ui';
procedure mpz_cdiv_qr(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: Tmpz_srcptr; para4: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_cdiv_qr';
function mpz_cdiv_qr_ui(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: Tmpz_srcptr; para4: dword): dword; cdecl; external libgmp name '__gmpz_cdiv_qr_ui';
procedure mpz_cdiv_r(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_cdiv_r';
procedure mpz_cdiv_r_2exp(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_cdiv_r_2exp';
function mpz_cdiv_r_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword): dword; cdecl; external libgmp name '__gmpz_cdiv_r_ui';
function mpz_cdiv_ui(para1: Tmpz_srcptr; para2: dword): dword; cdecl; external libgmp name '__gmpz_cdiv_ui';
procedure mpz_clear(para1: Tmpz_ptr); cdecl; external libgmp name '__gmpz_clear';
procedure mpz_clears(para1: Tmpz_ptr); varargs; cdecl; external libgmp name '__gmpz_clears';
procedure mpz_clrbit(para1: Tmpz_ptr; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_clrbit';
function mpz_cmp(para1: Tmpz_srcptr; para2: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_cmp';
function mpz_cmp_d(para1: Tmpz_srcptr; para2: double): longint; cdecl; external libgmp name '__gmpz_cmp_d';
function _mpz_cmp_si(para1: Tmpz_srcptr; para2: longint): longint; cdecl; external libgmp name '__g_mpz_cmp_si';
function _mpz_cmp_ui(para1: Tmpz_srcptr; para2: dword): longint; cdecl; external libgmp name '__g_mpz_cmp_ui';
function mpz_cmpabs(para1: Tmpz_srcptr; para2: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_cmpabs';
function mpz_cmpabs_d(para1: Tmpz_srcptr; para2: double): longint; cdecl; external libgmp name '__gmpz_cmpabs_d';
function mpz_cmpabs_ui(para1: Tmpz_srcptr; para2: dword): longint; cdecl; external libgmp name '__gmpz_cmpabs_ui';
procedure mpz_com(para1: Tmpz_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_com';
procedure mpz_combit(para1: Tmpz_ptr; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_combit';
function mpz_congruent_p(para1: Tmpz_srcptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_congruent_p';
function mpz_congruent_2exp_p(para1: Tmpz_srcptr; para2: Tmpz_srcptr; para3: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmpz_congruent_2exp_p';
function mpz_congruent_ui_p(para1: Tmpz_srcptr; para2: dword; para3: dword): longint; cdecl; external libgmp name '__gmpz_congruent_ui_p';
procedure mpz_divexact(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_divexact';
procedure mpz_divexact_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword); cdecl; external libgmp name '__gmpz_divexact_ui';
function mpz_divisible_p(para1: Tmpz_srcptr; para2: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_divisible_p';
function mpz_divisible_ui_p(para1: Tmpz_srcptr; para2: dword): longint; cdecl; external libgmp name '__gmpz_divisible_ui_p';
function mpz_divisible_2exp_p(para1: Tmpz_srcptr; para2: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmpz_divisible_2exp_p';
procedure mpz_dump(para1: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_dump';
function mpz_export(para1: pointer; para2: Psize_t; para3: longint; para4: Tsize_t; para5: longint; para6: Tsize_t; para7: Tmpz_srcptr): pointer; cdecl; external libgmp name '__gmpz_export';
procedure mpz_fac_ui(para1: Tmpz_ptr; para2: dword); cdecl; external libgmp name '__gmpz_fac_ui';
procedure mpz_2fac_ui(para1: Tmpz_ptr; para2: dword); cdecl; external libgmp name '__gmpz_2fac_ui';
procedure mpz_mfac_uiui(para1: Tmpz_ptr; para2: dword; para3: dword); cdecl; external libgmp name '__gmpz_mfac_uiui';
procedure mpz_primorial_ui(para1: Tmpz_ptr; para2: dword); cdecl; external libgmp name '__gmpz_primorial_ui';
procedure mpz_fdiv_q(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_fdiv_q';
procedure mpz_fdiv_q_2exp(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_fdiv_q_2exp';
function mpz_fdiv_q_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword): dword; cdecl; external libgmp name '__gmpz_fdiv_q_ui';
procedure mpz_fdiv_qr(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: Tmpz_srcptr; para4: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_fdiv_qr';
function mpz_fdiv_qr_ui(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: Tmpz_srcptr; para4: dword): dword; cdecl; external libgmp name '__gmpz_fdiv_qr_ui';
procedure mpz_fdiv_r(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_fdiv_r';
procedure mpz_fdiv_r_2exp(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_fdiv_r_2exp';
function mpz_fdiv_r_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword): dword; cdecl; external libgmp name '__gmpz_fdiv_r_ui';
function mpz_fdiv_ui(para1: Tmpz_srcptr; para2: dword): dword; cdecl; external libgmp name '__gmpz_fdiv_ui';
procedure mpz_fib_ui(para1: Tmpz_ptr; para2: dword); cdecl; external libgmp name '__gmpz_fib_ui';
procedure mpz_fib2_ui(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: dword); cdecl; external libgmp name '__gmpz_fib2_ui';
function mpz_fits_sint_p(para1: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_fits_sint_p';
function mpz_fits_slong_p(para1: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_fits_slong_p';
function mpz_fits_sshort_p(para1: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_fits_sshort_p';
function mpz_fits_uint_p(para1: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_fits_uint_p';
function mpz_fits_ulong_p(para1: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_fits_ulong_p';
function mpz_fits_ushort_p(para1: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_fits_ushort_p';
procedure mpz_gcd(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_gcd';
function mpz_gcd_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword): dword; cdecl; external libgmp name '__gmpz_gcd_ui';
procedure mpz_gcdext(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: Tmpz_ptr; para4: Tmpz_srcptr; para5: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_gcdext';
function mpz_get_d(para1: Tmpz_srcptr): double; cdecl; external libgmp name '__gmpz_get_d';
function mpz_get_d_2exp(para1: Plongint; para2: Tmpz_srcptr): double; cdecl; external libgmp name '__gmpz_get_d_2exp';
function mpz_get_si(para1: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_get_si';
function mpz_get_str(para1: pchar; para2: longint; para3: Tmpz_srcptr): pchar; cdecl; external libgmp name '__gmpz_get_str';
